# aether-assistant

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: ci.yml
apps/backend/: pyproject.toml
apps/backend/aether/: __init__.py  container.py  main.py
apps/backend/aether/application/use_cases/: process_chat.py
apps/backend/aether/config/: settings.py
apps/backend/aether/domain/entities/: chat.py  message.py
apps/backend/aether/domain/ports/: llm.py
apps/backend/aether/infrastructure/llm/: ollama_adapter.py
apps/backend/aether/infrastructure/logging/: setup.py
apps/backend/aether/presentation/api/: routes.py
apps/backend/aether/presentation/ws/: session.py
apps/backend/config/: default.yaml
apps/backend/tests/application/: test_process_chat.py
apps/backend/tests/domain/: test_message.py
apps/backend/tests/infrastructure/: test_ollama_adapter.py
apps/backend/tests/presentation/: test_routes.py
apps/desktop/: index.html  package.json  pnpm-lock.yaml
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/features/overlay/: ChatInput.tsx  MessageStream.tsx  OverlayPanel.tsx  StatusPill.tsx
apps/desktop/src/shared/: types.ts
apps/desktop/src/shared/hooks/: useAetherWS.ts
apps/desktop/src/shared/store/: sessionStore.ts
docker/: docker-compose.dev.yml
scripts/: dev.sh
