[project]
name = "aether-backend"
version = "0.1.0"
description = "Aether Assistant — Python FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.28.0", "ruff>=0.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aether"]
