[package]
name = "aether-desktop"
version = "0.1.0"
description = "Aether Assistant — local-first AI desktop app"
authors = ["suryakka"]
edition = "2021"

[lib]
name = "aether_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
